# microbyte-example

./: .gitignore  CMakeLists.txt  README.md  app.cpp  main.cpp
platform/: MicroByteCmake.txt  microbyte-platform.json  microbyte-platform.py  platform.cmake
platform/Device/NRF32832/: NRF32832.cmake
platform/Device/STM32F407VG/: STM32F407VG.cmake
platform/SDK/microbyte_stm32f407/: ARMGCC-flags.cmake  ARMGCC.cmake  CMakeLists.txt  MicroByteDevice.cpp  MicroByteProjectConfig.h  MicroByteRTOSInit.cpp  STM32F407VG.ld  isr_stm32f407vg.c  mbed_boot_gcc_arm.c  microbyte_stm32f407.cmake  startup_stm32f407vg.c
tests/mutex/: main.cpp
