cmake_minimum_required (VERSION 3.5)
SET(CMAKE_SYSTEM_NAME Generic)

project(MicroByteSTM32F407VG)

ADD_GLOBALDIR(${CMAKE_CURRENT_SOURCE_DIR})

set(MBED_CLASSIC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/microbyte-dal/source/mbed-classic)
set(MICROBYTE_DAL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/microbyte-dal)

ADD_GLOBALDIR(${MBED_CLASSIC_DIR}/targets/cmsis)
ADD_GLOBALDIR(${MBED_CLASSIC_DIR}/targets/cmsis/TARGET_STM/TARGET_STM32F4)
ADD_GLOBALDIR(${MBED_CLASSIC_DIR}/targets/cmsis/TARGET_STM/TARGET_STM32F4/TARGET_STM32F407VG)

ADD_GLOBALDIR(${MBED_CLASSIC_DIR}/targets/hal/TARGET_STM/TARGET_STM32F4)
ADD_GLOBALDIR(${MBED_CLASSIC_DIR}/targets/hal/TARGET_STM/TARGET_STM32F4/TARGET_MICROBYTE_F407VG)

ADD_GLOBALDIR(${MBED_CLASSIC_DIR}/hal)
ADD_GLOBALDIR(${MBED_CLASSIC_DIR}/common)
ADD_GLOBALDIR(${MBED_CLASSIC_DIR}/api)

ADD_GLOBALDIR(${MICROBYTE_DAL_DIR}/inc/core)
ADD_GLOBALDIR(${MICROBYTE_DAL_DIR}/inc/drivers)
ADD_GLOBALDIR(${MICROBYTE_DAL_DIR}/inc/types)

set(MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR ${MBED_CLASSIC_DIR}/targets/cmsis/TARGET_STM/TARGET_STM32F4)
set(MBED_CLASSIC_HAL_TARGET_STM32F4_DIR ${MBED_CLASSIC_DIR}/targets/hal/TARGET_STM/TARGET_STM32F4)
set(MBED_CLASSIC_COMMON_DIR ${MBED_CLASSIC_DIR}/common)

set(MbedClassic_SRCS
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/TARGET_STM32F407VG/cmsis_nvic.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/TARGET_STM32F407VG/hal_tick.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/TARGET_STM32F407VG/system_stm32f4xx.c

    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_adc.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_adc_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_can.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_cec.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_cortex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_crc.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_cryp.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_cryp_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_dac.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_dac_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_dcmi.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_dcmi_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_dma.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_dma2d.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_dma_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_eth.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_flash.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_flash_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_flash_ramfunc.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_fmpi2c.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_fmpi2c_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_gpio.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_hash.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_hash_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_hcd.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_i2c.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_i2c_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_irda.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_iwdg.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_ltdc.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_msp_template.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_nand.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_nor.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_pccard.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_pcd.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_pcd_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_qspi.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_rcc.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_rcc_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_rng.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_rtc.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_rtc_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_sai.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_sai_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_sd.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_sd.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_sdram.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_smartcard.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_spdifrx.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_spi.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_sram.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_tim.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_tim_ex.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_uart.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_usart.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_hal_wwdg.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_ll_fmc.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_ll_fsmc.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_ll_sdmmc.c
    ${MBED_CLASSIC_CMSIS_TARGET_STM32F4_DIR}/stm32f4xx_ll_usb.c

    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/TARGET_MICROBYTE_F407VG/PeripheralPins.c

    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/analogin_api.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/analogout_api.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/gpio_api.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/gpio_irq_api.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/i2c_api.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/mbed_overrides.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/pinmap.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/port_api.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/pwmout_api.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/rtc_api.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/serial_api.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/sleep.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/spi_api.c
    ${MBED_CLASSIC_HAL_TARGET_STM32F4_DIR}/us_ticker.c

    ${MBED_CLASSIC_COMMON_DIR}/assert.c
    ${MBED_CLASSIC_COMMON_DIR}/board.c
    ${MBED_CLASSIC_COMMON_DIR}/BusIn.cpp
    ${MBED_CLASSIC_COMMON_DIR}/BusOut.cpp
    ${MBED_CLASSIC_COMMON_DIR}/CallChain.cpp
    ${MBED_CLASSIC_COMMON_DIR}/CAN.cpp
    ${MBED_CLASSIC_COMMON_DIR}/error.c
    ${MBED_CLASSIC_COMMON_DIR}/Ethernet.cpp
    ${MBED_CLASSIC_COMMON_DIR}/FileBase.cpp
    ${MBED_CLASSIC_COMMON_DIR}/FileLike.cpp
    ${MBED_CLASSIC_COMMON_DIR}/FilePath.cpp
    ${MBED_CLASSIC_COMMON_DIR}/FileSystemLike.cpp
    ${MBED_CLASSIC_COMMON_DIR}/gpio.c
    ${MBED_CLASSIC_COMMON_DIR}/I2C.cpp
    ${MBED_CLASSIC_COMMON_DIR}/I2CSlave.cpp
    ${MBED_CLASSIC_COMMON_DIR}/InterruptIn.cpp
    ${MBED_CLASSIC_COMMON_DIR}/InterruptManager.cpp
    ${MBED_CLASSIC_COMMON_DIR}/LocalFileSystem.cpp
    ${MBED_CLASSIC_COMMON_DIR}/lp_ticker_api.c
    ${MBED_CLASSIC_COMMON_DIR}/mbed_interface.c
    ${MBED_CLASSIC_COMMON_DIR}/pinmap_common.c
    ${MBED_CLASSIC_COMMON_DIR}/RawSerial.cpp
    ${MBED_CLASSIC_COMMON_DIR}/retarget.cpp
    ${MBED_CLASSIC_COMMON_DIR}/rtc_time.c
    ${MBED_CLASSIC_COMMON_DIR}/semihost_api.c
    ${MBED_CLASSIC_COMMON_DIR}/Serial.cpp
    ${MBED_CLASSIC_COMMON_DIR}/SerialBase.cpp
    ${MBED_CLASSIC_COMMON_DIR}/SPI.cpp
    ${MBED_CLASSIC_COMMON_DIR}/SPISlave.cpp
    ${MBED_CLASSIC_COMMON_DIR}/Stream.cpp
    ${MBED_CLASSIC_COMMON_DIR}/Ticker.cpp
    ${MBED_CLASSIC_COMMON_DIR}/ticker_api.c
    ${MBED_CLASSIC_COMMON_DIR}/Timeout.cpp
    ${MBED_CLASSIC_COMMON_DIR}/Timer.cpp
    ${MBED_CLASSIC_COMMON_DIR}/TimerEvent.cpp
    ${MBED_CLASSIC_COMMON_DIR}/us_ticker_api.c
    ${MBED_CLASSIC_COMMON_DIR}/wait_api.c
)

set(Board_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/startup_stm32f407xx.S
    ${CMAKE_CURRENT_SOURCE_DIR}/MicroByteDevice.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/mbed_boot_gcc_arm.c
    ${CMAKE_CURRENT_SOURCE_DIR}/MicroByteRTOSInit.cpp
)

set(MicroByteDal_SRCS
    ${MICROBYTE_DAL_DIR}/source/types/Cib.cpp
    ${MICROBYTE_DAL_DIR}/source/types/CircList.cpp
    ${MICROBYTE_DAL_DIR}/source/types/List.cpp

    ${MICROBYTE_DAL_DIR}/source/core/MicroByteEvent.cpp
    ${MICROBYTE_DAL_DIR}/source/core/MicroByteMsg.cpp
    ${MICROBYTE_DAL_DIR}/source/core/MicroByteMutex.cpp
    ${MICROBYTE_DAL_DIR}/source/core/MicroByteThread.cpp
)

set(PLATFORM_LIBS_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/dummy.c
)

add_definitions(-DMICROBYTE_PROJECT_CONFIG_FILE="MicroByteProjectConfig.h")
add_definitions(-DTOOLCHAIN_GCC)
add_definitions(-DTOOLCHAIN_GCC_ARM)
add_definitions(-DMBED_OPERATORS)

add_library(MbedClassic STATIC ${MbedClassic_SRCS})
add_library(Board STATIC ${Board_SRCS})
add_library(MicroByteDal STATIC ${MicroByteDal_SRCS})
add_library(PLATFORM_LIBS STATIC ${PLATFORM_LIBS_SRCS})

target_compile_options(MbedClassic
    PRIVATE
        -Wno-unused-parameter
        -Wno-unused-variable
        -Wno-sign-compare
)

set(PLATFORM_LIBS_List MbedClassic MicroByteDal Board)
add_dependencies(PLATFORM_LIBS ${PLATFORM_LIBS_List})
target_link_libraries(PLATFORM_LIBS -Wl,--whole-archive ${PLATFORM_LIBS_List} -Wl,--no-whole-archive)
